﻿2017-01-xx: 0.0.5
	- Add predict.types() method which returns conversion table of common
	  types for predict method of model.adapter to function specific types
	  of predict.
	- Reconstruct test suites.
2017-01-06: 0.0.4
	- Added support for result of MASS::stepAIC.
2016-12-31: 0.0.3
	- Fixed a bug: get.link() and get.linkinv() methods of model.interface.glm
	  class did not work correctly.
2016-07-11: 0.0.2
	- Changed the possible value of 'type' field of ma.prediction class.
	- Added predict(), get.link(), get.linkinv() method to model.interface.MCMCglmm.
	- Fixed a bug that get.family function does not work correctly when link function
	  is manually specified.