@@ -3,6 +3,7 @@
 	  types for predict method of model.adapter to function specific types
 	  of predict.
 	- Reconstruct test suites.
+	- Improved predict() method of model.interface classes.
 2017-01-06: 0.0.4
 	- Added support for result of MASS::stepAIC.
 2016-12-31: 0.0.3
